# outward-assembly

./: .gitignore  CITATION.cff  README.md  oa_tools_env.yml  pyproject.toml
.github/workflows/: ci.yml  label-issues.yml
benchmarks/: RESULTS.md  benchmark_subset_contigs.py  bowtie.py  kmer_filter_scaling.py  naive.py  run_benchmark.py
docs/: algorithm_details.md  examining-work-dir.md  experimental.md  installation.md  nucleaze_migration.md  usage.md
docs/example-assembly-dir/: ref_genome.fasta  script.py  seed_seq.fasta  warm_start.fasta
docs/pileup_visualization/: PILEUP_README.md
nextflow/: main.nf
nextflow/config/: containers.config
nextflow/docker/: Dockerfile.nucleaze
outward_assembly/: README.md  basic_seq_operations.py  execution_state.py  io_helpers.py  kmer_freq_filter.py  pileup.py  pipeline.py  pipeline_steps.py  strategy.py
pileup_visualization/: PILEUP_README.md  cigar.py  pileup.py  pileup_visualization.py  requirements.txt  test_synthetic_data.py
tests/: output_contigs.fasta  test_docker.py  test_drive_oa.py  test_subset_contigs.py  test_subset_contigs_variants.py
tests/data/: generate_fake_siz_files.py
tests/integration/: test_kmer_counting.py  test_nucleaze_bbduk_equivalence.py
tests/oa_workdir/tmpeh8hkgdk/: current_contigs.fasta  log.txt
tests/oa_workdir/tmpk1mlckp0/: filter_commands.txt  lee-oa-test-data-outward-assembly-test-siz-test_reads_chunk000001_1.fastq  lee-oa-test-data-outward-assembly-test-siz-test_reads_chunk000001_2.fastq  (+2 more)
tests/unit_tests/: test_pileup.py  test_prepare_query_seqs.py
(+331 files in other folders)
