[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "outward_assembly"
version = "0.1.0"
description = "Assembly tool for growing contigs outward from a seed sequence"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "networkx~=3.4.2",
    "biopython~=1.84",
    "boto3~=1.35.81",
    "python-dotenv~=1.0.1",
    "pyyaml~=6.0.2",
    "pyahocorasick>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "pytest~=8.3.4",
    "ruff",
    "ipython",
]
pileup = [
    "Pillow>=9.0.0",
    "pysam>=0.22.0",
]

[tool.pytest.ini_options]
markers = [
    "fast",
    "slow", 
    "unit",
    "integration",
    "e2e: end to end",
    "requires_tools: Requires bioinformatics tools (megahit, bbduk, etc.)",
    "requires_aws: Requires AWS credentials and services"
]

[tool.setuptools]
packages = ["outward_assembly"]

[tool.black]
line-length = 92

[tool.ruff.lint]
select = [
    "E",     # Pycodestyle
    "F",     # Pyflakes  
    "I",     # isort
    "PERF",  # Performance anti-patterns
]
ignore = [
    "E203",  # Whitespace before ':' (use black's style)
    "E501",  # Line too long (let black handle this)
]
